# yewtube

./: Cargo.toml  LICENSE  README.md  index.html
src/: component.rs  ext.rs  lib.rs  main.rs
